--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,53 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  margin: 0;
+  padding: 0;
+  
+  background-color: #fdfdfd; /* whitish background */
+  background-image: 
+    linear-gradient(to right, #e0e0e0f8 1px, transparent 1px),
+    linear-gradient(to bottom, #e0e0e0f8 1px, transparent 1px);
+  background-size: 30px 30px; /* size of each box */
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.patrick-hand-regular {
+  font-family: "Patrick Hand", cursive;
+  font-weight: 200;
+  font-style: normal;
+}
+.flexn{
+  
+  margin: auto;
+  margin-top: 30px;
+  max-width: 40vw;
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@media(max-width:700px){
+  .flexn{
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  max-width: 100vw;
+  padding: 0 10px;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+
+.innerBorder{
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px ;
+  background: linear-gradient(135deg, #ff9900, #f16669, #f9d423);
+  border: 3px solid transparent;
 }
+
+.pic{
+  background: linear-gradient( #ff9900, #f16669, #f9d423);
+
+}
+
