--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,9 @@ body {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.fontn{
+  font-family:'Courier New', Courier, monospace;
+}
 
 .flexn{
   
