--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   /* background grid */
-  background-color: #fdfdfd;
+ background-color: linear-gradient(to bottom right, #ffecd2, #fcb69f, #a1c4fd);
   background-image: 
     linear-gradient(to right, #e0e0e0f8 1px, transparent 1px),
     linear-gradient(to bottom, #e0e0e0f8 1px, transparent 1px);
@@ -37,6 +37,7 @@ body {
   margin: auto;
   max-width: 100vw;
   padding: 0 10px;
+  max-width: 0 10px; 
   }
 
   .sm{
@@ -122,10 +123,12 @@ body {
 
 @media (max-width: 700px) {
   #flexnn {
-    margin: 10px;
-    max-width: 100vw;
+   
+    max-width: 98vw;
     padding: 10px 16px;
     border-radius: 8px;
+    position:fixed;    
+    left: 5;
   }
 }
 
